made responsive, fixed side margin problem

--- a/index.html
+++ b/index.html
@@ -275,8 +275,10 @@
               </div>
             </div>
             <div class="container CCtext">
-              <h5>Cecilia Covert is the blahblahblahblahblahblahblahblahbl
-                ahblahblahblahblahb lorum ipsum daoisdioaisdioasoidoasdioas
+              <h5>Cecilia Covert is the blahblahblah
+                blahblahblahblahblahbl
+                ahblahblahblahblahb lorum ipsum daois
+                dioaisdioasoidoasdioas
                 dioasidaoisod.
               </h5>
               <a href="#" class="CCworkLink">View CC's work ►</a>
@@ -368,7 +370,7 @@
                     <div class="afterPhoto">
                         <div class="afterBlackBox">
                             <h5>"Storyboard taught me a lot of valuable video production skills that UVA wouldn't have been able to teach me.</h5>
-                            <h6>- Dorothy Wang, HackCville Member, Storyboard Program Graduate</h6>
+                            <h6>- Dorothy Wang, Storyboard Program Graduate</h6>
                         </div>
                         <div class="afterTealBox">
                         </div>
@@ -380,7 +382,7 @@
                     <div class="afterPhoto">
                         <div class="afterBlackBox">
                             <h5>"Storyboard taught me a lot of valuable video production skills that UVA wouldn't have been able to teach me.</h5>
-                            <h6>- Dorothy Wang, HackCville Member, Storyboard Program Graduate</h6>
+                            <h6>- Dorothy Wang, Storyboard Program Graduate</h6>
                         </div>
                         <div class="afterTealBox">
                         </div>
@@ -395,7 +397,7 @@
                 </div>
             </div>
         </div>
-        <div class="landed">
+        <div class="landed" id="landedID">
             <div class="container-fluid">
                 <div class="landedTitle">
                     <h2>PLACES WE'VE LANDED</h2>
@@ -404,7 +406,7 @@
                 <div class="col-md-2"><img class="pioneerLogo" src="images/pioneerLogo.jpg"></div>
                 <div class="col-md-2">.<img class="cnnLogo" src="images/nbcLogo.png"></div>
                 <div class="col-md-2"><img class="parselyLogo" src="images/parselyLogo.png"></div>
-                <div class="col-md-2"><img class="tomtomLogo" src="images/tomtomLogo.jpg"></div>
+                <div class="col-md-2"><img class="tomtomLogo" src="images/tomtomLogo.png"></div>
                 <div class="col-md-2"><img class="bostonredsoxLogo" src="images/redsoxLogo.jpg"></div>
                 <div class="col-md-2"><img class="uncubed" src="images/uncubed.png"></div>
             </div>
@@ -413,7 +415,8 @@
                 <div class="col-xs-6"><img class="pioneerLogo logo" src="images/pioneerLogo.jpg"></div>
                 <div class="col-xs-6">.<img class="cnnLogo logo" src="images/nbcLogo.png"></div>
                 <div class="col-xs-6"><img class="parselyLogo logo" src="images/parselyLogo.png"></div>
-                <div class="col-xs-6"><img class="tomtomLogo logo" src="images/tomtomLogo.jpg"></div>
+                <div class="col-xs-6"><img class="tomtomLogo logo" src="images/tomtomLogo.png"></div>
+                <div class="col-xs-6 tomtomLogoSmall"><img class="tomtomLogo2 logo" src="images/tomtomSingleLogo.png"></div>
                 <div class="col-xs-6"><img class="bostonredsoxLogo logo" src="images/redsoxLogo.jpg"></div>
                 <div class="col-xs-6"><img class="uncubed logo" src="images/uncubed.png"></div>
             </div>
