--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -69,7 +70,7 @@
                 <div class="quoteSet">
                   <h5>"I love the new people HackCville exposed me to: people who are driven, creative, ambitious, and inspirational. 
                     I also loved the skills, both hard and soft, I got to learn and practice."</h5><br>
-                    <h6> - Becky Ross, HackCville Member, Storyboard Program Graduate</h6>
+                    <h6> - Becky Ross, Storyboard Program Graduate</h6>
                   </div>
                   <div class="tealOffSet">
                   </div>
