--- a/apply.html
+++ b/apply.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
+    <script src="main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script> 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +22,31 @@
   </head>
   <body>
 
-    <div class="return-arrow"><span class="glyphicon glyphicon-chevron-left"></span><a href="index.html" class="apply-page-link"> return to program info page</a></div>
+    <!-- <div class="return-arrow"><span class="glyphicon glyphicon-chevron-left"></span><a href="index.html" class="apply-page-link"> return to program info page</a></div> -->
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!--LOGO-->
+          <a class="navbar-brand" href="index.html">
+            <img class="hackCvilleLogo" alt="Brand" src="images2/hackCvilleLogo.png">
+          </a>
+        </div>
+        <div class="collapse navbar-collapse" id="mainNavBar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" onclick= "window.location.href='index.html#aboutPage'">About</a></li>
+            <li><a href="#" onclick= "window.location.href='index.html#skillsSection'">Curriculum</a></li>
+            <li><a href="#">Outcomes</a></li>
+            <li><a href="apply.html"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
+          </ul> 
+        </div>
+        </div>
+    </nav>
 
     <div class="header">
         <div class="hero-image">
