responsive apply page woohoo

--- a/apply.html
+++ b/apply.html
@@ -24,7 +24,7 @@
 
     <!-- <div class="return-arrow"><span class="glyphicon glyphicon-chevron-left"></span><a href="index.html" class="apply-page-link"> return to program info page</a></div> -->
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
