added js functionality to navbar items (scroll to top of div) and fixed nav bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
   </head>
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
@@ -39,7 +39,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" onclick= "scrollToTop()">About</a></li>
             <li><a href="#" onclick= "scrollToTopTwo()">Curriculum</a></li>
-            <li><a href="#">Outcomes</a></li>
+            <li><a href="#" onclick="scrollToTopThree()">Outcomes</a></li>
             <li><a href="apply.html"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
         </div>
@@ -310,7 +310,7 @@
           </div>
         </div>
 
-        <div class="student-work">
+        <div id="studWork" class="student-work">
           <div class="container-fluid">
             <div class="row-fluid">
               <h3>CHECK OUT THESE</h3>
