added video in background AYYYY.. but not responsive..booo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
     </nav>
     <div class="header">
         <div class="hero-image">
+            <div class="header-unit">
+                <div id="video-container">
+                <video controls muted autoplay loop class="fillWidth">
+                <source src="videos/backgroundVideo.mp4" type="video/mp4"/>
+<!--
+                <source src="http://yourwebsite.com/your-video-file.ogg" type="video/ogg"/>
+                <source src="http://yourwebsite.com/your-video-file.webm" type="video/webm"/>
+-->
+                Your browser does not support the video tag. I suggest you upgrade your browser.
+                </video>
+                </div><!-- end video-container -->
+                </div><!-- end .header-unit -->
           <div class="hero-text">
             <h1 id="hero-title">STORYBOARD</h1>
             <h3>HackCville's Digital Media Program</h3>
