made small tweaks such as spacing issues and titles

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 
           <div id="teachers" class="instructors">
             <div class="instructorsMainTitle">
+              <h3>OUR BEST STUDENTS</h3>
               <h2 class="teacherTitle">YOUR INSTRUCTORS</h2>
             </div>
             <div class="container-fluid ccPhotoTextHolder">
@@ -360,7 +361,11 @@
 
         </div>
         <div class="after-storyboard">
-            <h2 class="afterStoryboardTitle">WHERE STORYBOARD CAN TAKE YOU</h2>
+            <!-- <h2 class="afterStoryboardTitle">WHERE STORYBOARD CAN TAKE YOU</h2> -->
+            <div>
+              <h3>AFTER STORYBOARD</h3>
+              <h2>SO WHAT'S NEXT?</h2>
+            </div>
             <div class="container-fluid hideWhenMobile">
                 <div class="container afterStoryBoardHolder">
                     <div class="afterTitle">
@@ -402,7 +407,8 @@
         <div class="landed" id="landedID">
             <div class="container-fluid">
                 <div class="landedTitle">
-                    <h2>PLACES WE'VE LANDED</h2>
+                    <h3>PLACES WE'VE GONE</h3>
+                    <h2>PLACES YOU CAN GO</h2>
                 </div>
             <div class="row logoHolder hideLogosWhenMobile">
                 <div class="col-md-2"><img class="pioneerLogo" src="images/pioneerLogo.jpg"></div>
