--- a/apply.html
+++ b/apply.html
@@ -19,6 +19,18 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <meta name="keywords" content="hackcville storyboard application pioneer media videography photography entrepreneurship program school education startup marketing industry experience expertise career start curriculum charlottesville cville uva virginia university">
+
+    <meta name="description" content="HackCville's 12-week digital media program.">
+
+    <meta property="og:title" content="A class for the digital storyteller" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://wireframewebsites.com/dorothywang/storyboard-redesign/apply.html" />
+    <meta property="og:image" content="http://wireframewebsites.com/dorothywang/storyboard-redesign/images/heroImage2.png"/>
+    <meta property="og:image:width" content = "1699" />
+    <meta property="og:image:height" content = "880" />
+
   </head>
   <body>
 
@@ -33,7 +45,7 @@
             <span class="icon-bar"></span>
           </button>
           <!--LOGO-->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="http://hackcville.com/">
             <img class="hackCvilleLogo" alt="Brand" src="images2/hackCvilleLogo.png">
           </a>
         </div>
@@ -41,7 +53,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" onclick= "window.location.href='index.html#aboutPage'">About</a></li>
             <li><a href="#" onclick= "window.location.href='index.html#skillsSection'">Curriculum</a></li>
-            <li><a href="#">Outcomes</a></li>
+            <li><a href="#" onclick= "window.location.href='index.html#outcomes'">Outcomes</a></li>
             <li><a href="apply.html"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
         </div>
