tweaky things such as spacing between divs and linked logos

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <h5>Catherine "CC" Cura is the first woman Director of The Pioneer, an online publication run out of HackCville on The Corner.
                  She is a third-year at the University of Virginia studying Media Studies and Politics.
                </h5>
-               <a href="#" class="CCworkLink">View CC's work ►</a>
+               <a href="http://thepioneer.co/author/catherinecura/" target="_blank" class="CCworkLink">View CC's work ►</a>
              </div>
            </div>
 
@@ -352,6 +352,7 @@
                         <div class="captions">
 
                           <p>Dorothy Wang, Fall 2016 Graduate<p>
+                          <a class="article-link" href="https://vimeo.com/195110734" target="_blank">watch on vimeo ►</a>
                           
                         </div>
                       </div>
@@ -453,22 +454,33 @@
                     <h2>PLACES YOU CAN GO</h2>
                 </div>
             <div class="row logoHolder hideLogosWhenMobile">
-                <div class="col-md-2"><img alt="Pioneer Logo" class="pioneerLogo" src="images/pioneerLogo.jpg"></div>
-                <div class="col-md-2">.<img alt="CNN Logo" class="cnnLogo" src="images/nbcLogo.png"></div>
-                <div class="col-md-2"><img alt="Parse.ly Logo" class="parselyLogo" src="images/parselyLogo.png"></div>
-                <div class="col-md-2"><img alt="TTFF Logo" class="tomtomLogo" src="images/tomtomLogo.png"></div>
-                <div class="col-md-2"><img alt="Red Sox Logo" class="bostonredsoxLogo" src="images/redsoxLogo.jpg"></div>
-                <div class="col-md-2"><img alt="Uncubed Logo" class="uncubed" src="images/uncubed.png"></div>
+                <div class="col-md-2"><a href="http://thepioneer.co/" target="_blank"><img alt="Pioneer Logo" class="pioneerLogo" src="images/pioneerLogo.jpg"></a></div>
+
+                <div class="col-md-2"><a href="http://www.nbc.com/" target="_blank"><img alt="NBC Logo" class="cnnLogo" src="images/nbcLogo.png"></a></div>
+
+                <div class="col-md-2"><a href="https://www.parse.ly/" target="_blank"><img alt="Parse.ly Logo" class="parselyLogo" src="images/parselyLogo.png"></a></div>
+
+                <div class="col-md-2"><a href="https://tomtomfest.com/" target="_blank"><img alt="TTFF Logo" class="tomtomLogo" src="images/tomtomLogo.png"></a></div>
+
+                <div class="col-md-2"><a href="https://www.mlb.com/redsox" target="_blank"><img alt="Red Sox Logo" class="bostonredsoxLogo" src="images/redsoxLogo.jpg"></a></div>
+
+                <div class="col-md-2"><a href="https://uncubed.com/" target="_blank"><img alt="Uncubed Logo" class="uncubed" src="images/uncubed.png"></a></div>
             </div>
                 
             <div class="row logoHolder showLogosWhenMobile">
-                <div class="col-xs-6"><img class="pioneerLogo logo" alt="Pioneer Logo" src="images/pioneerLogo.jpg"></div>
-                <div class="col-xs-6">.<img class="cnnLogo logo" alt="CNN Logo" src="images/nbcLogo.png"></div>
-                <div class="col-xs-6"><img class="parselyLogo logo" alt="Parse.ly Logo" src="images/parselyLogo.png"></div>
-                <div class="col-xs-6"><img class="tomtomLogo logo" alt="TTFF Logo" src="images/tomtomLogo.png"></div>
-                <div class="col-xs-6 tomtomLogoSmall"><img class="tomtomLogo2 logo" alt="TTFF Logo" src="images/tomtomSingleLogo.png"></div>
-                <div class="col-xs-6"><img class="bostonredsoxLogo logo" alt="Red Sox Logo" src="images/redsoxLogo.jpg"></div>
-                <div class="col-xs-6"><img class="uncubed logo" alt="Uncubed Logo" src="images/uncubed.png"></div>
+                <div class="col-xs-6"><a href="http://thepioneer.co/" target="_blank"><img class="pioneerLogo logo" alt="Pioneer Logo" src="images/pioneerLogo.jpg"></a></div>
+
+                <div class="col-xs-6"><a href="http://www.nbc.com/" target="_blank"><img alt="NBC Logo" class="cnnLogo" src="images/nbcLogo.png"></a></div>
+
+                <div class="col-xs-6"><a href="https://www.parse.ly/" target="_blank"><img alt="Parse.ly Logo" class="parselyLogo" src="images/parselyLogo.png"></a></div>
+
+                <div class="col-xs-6"><a href="https://tomtomfest.com/" target="_blank"><img class="tomtomLogo logo" alt="TTFF Logo" src="images/tomtomLogo.png"></a></div>
+
+                <div class="col-xs-6 tomtomLogoSmall"><a href="https://tomtomfest.com/" target="_blank"><img class="tomtomLogo2 logo" alt="TTFF Logo" src="images/tomtomSingleLogo.png"></a></div>
+
+               <div class="col-xs-6"><a href="https://www.mlb.com/redsox" target="_blank"><img alt="Red Sox Logo" class="bostonredsoxLogo" src="images/redsoxLogo.jpg"></a></div>
+
+                <div class="col-xs-6"><a href="https://uncubed.com/" target="_blank"><img alt="Uncubed Logo" class="uncubed" src="images/uncubed.png"></a></div>
             </div>
             </div>
         </div>
