--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta property="og:image:width" content = "1699" />
     <meta property="og:image:height" content = "880" />
 
+    <link rel="shortcut icon" href="images/favicon.ico">
     
   </head>
   <body>
